<resources>
    <string name="app_name">safe&amp;Fit</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_user_activity">Activity</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_directions">Directions</string>
    <string name="title_home">Home</string>


    <string name="vehicle_activity">Vehicle</string>
    <string name="bicycle_activity">Bicycle</string>
    <string name="onfoot_activity">On Fooot</string>
    <string name="running_activity">Running</string>
    <string name="no_movement">Idle</string>
    <string name="other_activity">Other</string>

    <string name="home_summary_title">Daily Activity Summary</string>
    <string name="home_achievement_title">Daily Achievements</string>
    <string name="home_mode">Mode</string>
    <string name="daily_steps">Daily Steps</string>
    <string name="daily_calories">Calories Burn</string>

    <string name="loading">Loading</string>
    <string name="still">Still:</string>

    <!--time units-->
    <string name="minutes">Minutes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_accident">AccidentActivity</string>


</resources>
