<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/navigation_activity"
        android:icon="@drawable/ic_directions_walk_black_24dp"
        android:title="@string/title_user_activity"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/navigation_statistics"
        android:icon="@drawable/ic_assessment_black_24dp"
        android:title="@string/title_statistics"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/navigation_directions"
        android:icon="@drawable/ic_directions_black_24dp"
        android:title="@string/title_directions"
        app:showAsAction="always|withText"/>

</menu>
