<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="60dp"
    tools:context="com.upv.rosiebelt.safefit.fragments.HomeFragment">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/home_fragment_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>
    <android.support.v7.widget.CardView
        android:id="@+id/mode"
        android:layout_marginVertical="5dp"
        android:elevation="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <antonkozyriatskyi.circularprogressindicator.CircularProgressIndicator
                android:id="@+id/progress_indicator"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:paddingTop="10dp"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                app:useProgressTextDelimiter="false"
                app:progressColor="@color/blue_c"
                app:textColor="@color/white"
                app:progressStrokeWidth="15dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
            <ImageView
                android:id="@+id/mode_image"
                android:layout_width="129dp"
                android:layout_height="127dp"
                android:layout_marginTop="30dp"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:srcCompat="@drawable/icon_still" />

            <TextView
                android:id="@+id/mode_text"
                android:layout_width="wrap_content"
                android:layout_height="31dp"
                android:layout_marginTop="30dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/loading"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mode_image" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/activity_summary"
        android:layout_marginVertical="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <android.support.constraint.ConstraintLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/summary_title"
                android:textStyle="bold"
                android:textSize="15dp"
                android:textColor="@color/blue_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_summary_title"
                android:paddingBottom="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/daily_steps"
                android:paddingLeft="30dp"
                app:layout_constraintTop_toBottomOf="@id/summary_title"/>
            <TextView
                android:id="@+id/no_steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                app:layout_constraintTop_toBottomOf="@id/summary_title"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/daily_calories"
                android:paddingTop="15dp"
                android:paddingLeft="30dp"
                app:layout_constraintTop_toBottomOf="@id/no_steps"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:paddingTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/no_steps"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/achievements"
        android:layout_marginVertical="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <android.support.constraint.ConstraintLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/achievement_title"
                android:textStyle="bold"
                android:textSize="15dp"
                android:textColor="@color/blue_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_achievement_title"
                android:paddingBottom="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/daily_steps"
                android:paddingLeft="30dp"
                app:layout_constraintTop_toBottomOf="@id/achievement_title"/>
            <TextView
                android:id="@+id/daily_steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                app:layout_constraintTop_toBottomOf="@id/achievement_title"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                app:layout_constraintLeft_toRightOf="@id/daily_steps"
                app:layout_constraintTop_toBottomOf="@id/achievement_title"
                app:srcCompat="@drawable/trophy"/>

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
